@@ -895,7 +895,7 @@ public class Server extends BaseDomainHelper implements Identifiable {
      */
     public List<ServerGroupType> getEntitledGroupTypes() {
         return this.groups.stream().filter(g ->g.getGroupType() != null)
-                .map(ServerGroup::getGroupType).collect(Collectors.toList());
+                .map(ServerGroup::getGroupType).toList();
     }
 
     /**
@@ -904,16 +904,18 @@ public class Server extends BaseDomainHelper implements Identifiable {
      */
     public List<EntitlementServerGroup> getEntitledGroups() {
         return this.groups.stream().filter(g ->g.getGroupType() != null)
-                .map(s -> (EntitlementServerGroup) s).collect(Collectors.toList());
+                .map(s -> (EntitlementServerGroup) s).toList();
     }
 
     /**
      * The set of managed ServerGroup(s) that this Server is a member of
      * @return Returns the serverGroups.
      */
+    @SuppressWarnings("java:S6204")
     public List<ManagedServerGroup> getManagedGroups() {
         return this.groups.stream().filter(g -> g.getGroupType() == null)
-                .map(s -> (ManagedServerGroup) s).collect(Collectors.toList());
+                .map(s -> (ManagedServerGroup) s)
+                .collect(Collectors.toList());
     }
 
     /**
@@ -1768,10 +1770,9 @@ public class Server extends BaseDomainHelper implements Identifiable {
      */
     @Override
     public boolean equals(final Object other) {
-        if (!(other instanceof Server)) {
+        if (!(other instanceof Server castOther)) {
             return false;
         }
-        Server castOther = (Server) other;
 
         Optional<PackageEvr> proxyVersion =
                 Optional.ofNullable(proxyInfo).map(ProxyInfo::getVersion);
