@@ -45,7 +45,6 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.SortedMap;
 import java.util.TreeMap;
-import java.util.stream.Collectors;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
@@ -242,7 +241,7 @@ public class PowerManagementAction extends RhnAction {
         String typeString = ConfigDefaults.get().getCobblerPowerTypes();
         if (typeString != null) {
             List<String> typeNames = Arrays.stream(typeString.split(","))
-                    .map(c -> c.trim()).collect(Collectors.toList());
+                    .map(c -> c.trim()).toList();
             for (String typeName : typeNames) {
                 types.put(
                     LocalizationService.getInstance().getPlainText(
