@@ -171,14 +171,14 @@ public class CVEAuditController {
             .listSystemsByPatchStatus(user, request.cveIdentifier,
                     request.statuses);
             return cveAuditServers.stream().map(x -> (CVEAuditSystem)x)
-                    .collect(Collectors.toList());
+                    .toList();
         case IMAGE:
             // TODO: Use CVEAuditManagerOVAL once it's ready
             List<CVEAuditImage> cveAuditImages = CVEAuditManager
             .listImagesByPatchStatus(user, request.cveIdentifier,
                     request.statuses);
             return cveAuditImages.stream().map(x -> (CVEAuditSystem)x)
-                    .collect(Collectors.toList());
+                    .toList();
         default: throw new RuntimeException("unreachable");
         }
     }
@@ -202,7 +202,7 @@ public class CVEAuditController {
                     catch (IllegalArgumentException e) {
                         return Stream.empty();
                     }
-                }).collect(Collectors.toList());
+                }).toList();
         List<CVEAuditSystem> cveAuditSystems = Collections.emptyList();
         if (!psList.isEmpty()) {
             EnumSet<PatchStatus> statuses = EnumSet.copyOf(psList);
